# SiroGen-Legacy

./: .gitignore  CMakeLists.txt
DnG/: floor.cpp  floor.h  ground.cpp  ground.h  main.cpp  player.cpp  player.h  tile.cpp  tile.h  wall.cpp  wall.h
ShootOut/: main.cpp  player.cpp  player.h  shootout.cpp  shootout.h
SiroGen/: animation.cpp  animation.h  camera.cpp  camera.h  collider.cpp  collider.h  color.cpp  color.h  component.cpp  component.h  core.cpp  core.h  entity.cpp  entity.h  hashmap.cpp  hashmap.h  input.cpp  input.h  model.h  pixelsprite.cpp  pixelsprite.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  sprite.cpp  sprite.h  spriteanimation.cpp  spriteanimation.h  text.cpp  text.h  texture.cpp  texture.h  time.cpp  time.h  transform.cpp  transform.h  update.cpp  (+3 more)
SiroGen/shaders/: default.frag  default.vert
SpriteConverter/: main.cpp
Test/: gangster.cpp  gangster.h  main.cpp  player.cpp  player.h  test.cpp  test.h  testnity.cpp  testnity.h  wackem.cpp  wackem.h  whackem.cpp  whackem.h
